# instab

./: Cargo.toml  README.md  instabilities.csv  size.sh
src/: color.rs  date.rs  fractal.rs  instab.rs  lib.rs  main.rs  opt.rs  parse.rs  rating.rs  set.rs
