[package]
name = "stab"
version = "0.1.0"
authors = ["ky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
# debug = true

[profile.dev]
panic = "abort"

[dependencies]
libc = { version = "0.2.81", default-features = false }
libc-print = "0.1.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["minwindef", "sysinfoapi"] }
